--- a/DiplomObsAlarm/DiplomObsAlarm.csproj
+++ b/DiplomObsAlarm/DiplomObsAlarm.csproj
@@ -71,6 +71,9 @@
 	  <MauiXaml Update="AdminEnterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="NewPage1.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
